part1/10/manifests/service-log-output.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
